# OpenRT

./: .gitignore  CMakeLists.txt  License.txt  README.md  appveyor.yml  num.txt  tests_bsp_optim_intersection.txt  tests_bsp_pdp_difference.txt  tests_bsp_pdp_intersection.txt  tests_bsp_pdp_union.txt  tests_pdp_differene.txt  tests_pdp_intersection.txt  tests_pdp_union.txt
.github/ISSUE_TEMPLATE/: bug_report.md
A/: conf.txt
B/: conf.txt
C/: conf.txt
batch/: copyOpenCVDLL.bat
cmake/: OpenRTConfig.cmake.in  OpenRTConfigVersion.cmake.in  types.h.in
data/: 1_earth_specular_map_8k.tif
demos/: CMakeLists.txt  Demo AreaLight.cpp  Demo Box.hpp  Demo CSG.cpp  Demo CornellBox.cpp  Demo DoF.cpp  Demo Marble.cpp  Demo PPM.cpp  Demo Prim.cpp  Demo Room.cpp  Demo SSLT.cpp  Demo Sampling.cpp  Demo SkyLight.cpp  Demo SpotLight.cpp  Demo Temp.cpp  Demo Texturing.cpp  Demo Virtual Reality.cpp  Demo_AreaLight.vcxproj  Demo_AreaLight.vcxproj.filters  Demo_CSG.vcxproj  Demo_CSG.vcxproj.filters  Demo_CornellBox.vcxproj  Demo_CornellBox.vcxproj.filters  Demo_DoF.vcxproj  Demo_DoF.vcxproj.filters  Demo_Prim.vcxproj  Demo_Prim.vcxproj.filters  Demo_SSLT.vcxproj  Demo_SSLT.vcxproj.filters  Demo_SkyLight.vcxproj  Demo_SkyLight.vcxproj.filters  Demo_SpotLight.vcxproj  Demo_SpotLight.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
doc/: Doxyfile
include/: macroses.h  mathutils.h  openrt.h
modules/: Chemodan.cpp
modules/core/: BRDFBlinn.cpp  BRDFBlinn.h  BRDFChrome.cpp  BRDFChrome.h  BRDFGlossy.cpp  BRDFGlossy.h  BRDFLambertian.cpp  BRDFLambertian.h  BRDFOrenNayar.cpp  BRDFOrenNayar.h  BRDFPhong.cpp  BRDFPhong.h  BRDFSpecularReflection.cpp  BRDFSpecularReflection.h  BSDFSpecularTransmission.cpp  BSDFSpecularTransmission.h  BSPNode.cpp  BSPNode.h  BSPTree.cpp  BSPTree.h  BTDFSpecularTransmission.cpp  BTDFSpecularTransmission.h  BoundingBox.cpp  BoundingBox.h  BxDF.cpp  BxDF.h  CGradient.cpp  CGradient.h  CMakeLists.txt  CPrim.cpp  CPrim.h  CameraEnvironment.cpp  CameraEnvironment.h  CameraEnvironmentTarget.h  CameraOrthographic.cpp  CameraOrthographic.h  CameraOrthographicTarget.h  CameraPerspective.cpp  CameraPerspective.h  CameraPerspectiveTarget.h  (+148 more)
tests/: CMakeLists.txt  TestBoundingBox.cpp  TestBoundingBox.h  TestCamera.cpp  TestCamera.h  TestSolid.cpp  TestSolid.h  TestSolidSphere.cpp  TestSolidSphere.h  TestSolidTorus.cpp  TestSolidTorus.h  TestTransform.cpp  TestTransform.h
